# word_library

./: .gitignore  Cargo.toml  README.md
develop_logs/: README.md  v0.0.1-20220819.md
src/: lib.rs
src/db/sqlite/: mod.rs  store.rs
src/store/: mod.rs
src/store/gui/: mod.rs
