[package]
name = "word_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.27.0"
lazy_static = "1.4.0"
sqlite3-sys = "0.14.0"
fltk = "^1.3"
fltk-webview = "0.2"


[build-dependencies]